# my-temp-repo

./: Demo.pptx  orch.json  user_interface.py
SimpleETL/: pyproject.toml
SimpleETL/src/SimpleETL/: log_manager.py  orchestration.py  quality_manager.py  script_manager.py  simple_config.py  simple_etl.py
